// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--rule-doc-title-format) desc uses the right rule doc title format 1`] = `
"# Description for no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) desc uses the right rule doc title format 2`] = `
"# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) desc-parens-name uses the right rule doc title format 1`] = `
"# Description for no-foo (\`no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) desc-parens-name uses the right rule doc title format 2`] = `
"# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) desc-parens-prefix-name uses the right rule doc title format, with fallback when missing description 1`] = `
"# Description for no-foo (\`no-foo\`)

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) desc-parens-prefix-name uses the right rule doc title format, with fallback when missing description 2`] = `
"# no-bar

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) name uses the right rule doc title format 1`] = `
"# no-foo

<!-- end auto-generated rule header -->
"
`;

exports[`generate (--rule-doc-title-format) prefix-name uses the right rule doc title format 1`] = `
"# no-foo

<!-- end auto-generated rule header -->
"
`;
